Prevent sticky header from covering up anchor links

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,8 @@
+html {
+  /* Offset that prevents sticky layout header from covering anchor links. */
+  scroll-padding-top: 4rem;
+}
+
 html,
 body {
   padding: 0;
